@@ -15,6 +15,7 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 Version 1.0.8.8
   -  Added language files
      * GwBasic (José Gabriel Moya Yangüela)
+     * HicEst (Georg Petrich)
      * Icon (Matt Oates)
      * MagikSF (Sjoerd van Leent)
      * Oz (Wolfgang Meyer)
